--- a/site/xref/com/sap/prd/mobile/ios/mios/package-frame.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>xcode-maven-plugin 1.2.1-SNAPSHOT Reference Package com.sap.prd.mobile.ios.mios</title>
+		<title>Xcode Maven Plugin 1.3.1 Reference Package com.sap.prd.mobile.ios.mios</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
