Added link to github repo on main docu page.

--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
 <h1>Xcode Maven Plugin</h1>
 
 
-<p>The Xcode Maven Plugin allows to build iOS Xcode projects with Maven and supports important features like (iOS library) dependency management.</p>
+<p>The Xcode Maven Plugin allows to build iOS Xcode projects with Maven and supports important features like dependency management (iOS libraries, frameworks, bundles).</p>
 
-<p>See <a href="site/index.html">Xcode Maven Plugin</a> for more information.</p>
-
+<p>See <a href="site/index.html">Xcode Maven Plugin</a> for more technical information and <a href="https://github.com/sap-production/xcode-maven-plugin">Github repository</a> to access the sources and to contribute.</p>
 
 Please enter your email address and subscribe to our mailinglist <a href="http://www.freelists.org/list/maven4ios">maven4ios@freelists.org</a> to stay up-to-date.</p>
 <form action="http://www.freelists.org/cgi-bin/subscription.cgi" method="POST" target="_blank">
