--- a/site/xref/allclasses-frame.html
+++ b/site/xref/allclasses-frame.html
@@ -36,16 +36,22 @@
 				<a href="com/sap/prd/mobile/ios/mios/DomUtils.html" target="classFrame">DomUtils</a>
 			</li>
 						<li>
+				<a href="com/sap/prd/mobile/ios/mios/CodeSignManager.html" target="classFrame">ExecResult</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/CodeSignManager.html" target="classFrame">ExecutionResultVerificationException</a>
+			</li>
+						<li>
 				<a href="com/sap/prd/mobile/ios/mios/FileUtils.html" target="classFrame">FileUtils</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/FolderLayout.html" target="classFrame">FolderLayout</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/Forker.html" target="classFrame">Forker</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/GAVUtil.html" target="classFrame">GAVUtil</a>
-			</li>
-						<li>
-				<a href="com/sap/prd/mobile/ios/mios/MavenTargetFolderLayout.html" target="classFrame">MavenTargetFolderLayout</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/OTAManager.html" target="classFrame">OTAManager</a>
@@ -55,6 +61,9 @@
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/PackagingType.html" target="classFrame">PackagingType</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/FileUtils.html" target="classFrame">PathResolutionException</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/PListManager.html" target="classFrame">PlistManager</a>
@@ -136,6 +145,9 @@
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/XCodePackageMojo.html" target="classFrame">XCodePackageMojo</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/XCodePackageXcodeprojMojo.html" target="classFrame">XCodePackageXcodeprojMojo</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/XCodePrepareBuildManager.html" target="classFrame">XCodePrepareBuildManager</a>
