--- a/site/xref-test/com/sap/prd/mobile/ios/mios/package-frame.html
+++ b/site/xref-test/com/sap/prd/mobile/ios/mios/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Xcode Maven Plugin 1.3.1 Reference Package com.sap.prd.mobile.ios.mios</title>
+		<title>Xcode Maven Plugin 1.3.2 Reference Package com.sap.prd.mobile.ios.mios</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -19,6 +19,9 @@
             	<a href="AppIDUpdateTest.html" target="classFrame">AppIDUpdateTest</a>
           	</li>
           	          	<li>
+            	<a href="CodeSignManagerTest.html" target="classFrame">CodeSignManagerTest</a>
+          	</li>
+          	          	<li>
             	<a href="CommandLineBuilderTest.html" target="classFrame">CommandLineBuilderTest</a>
           	</li>
           	          	<li>
@@ -31,6 +34,9 @@
             	<a href="FileUtilsTest.html" target="classFrame">FileUtilsTest</a>
           	</li>
           	          	<li>
+            	<a href="FolderLayoutTest.html" target="classFrame">FolderLayoutTest</a>
+          	</li>
+          	          	<li>
             	<a href="ForkerTest.html" target="classFrame">ForkerTest</a>
           	</li>
           	          	<li>
@@ -38,9 +44,6 @@
           	</li>
           	          	<li>
             	<a href="MacFileUtil.html" target="classFrame">MacFileUtil</a>
-          	</li>
-          	          	<li>
-            	<a href="MavenTargetFolderLayoutTest.html" target="classFrame">MavenTargetFolderLayoutTest</a>
           	</li>
           	          	<li>
             	<a href="OTAManagerTest.html" target="classFrame">OTAManagerTest</a>
