--- a/site/xref-test/com/sap/prd/mobile/ios/mios/package-summary.html
+++ b/site/xref-test/com/sap/prd/mobile/ios/mios/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Xcode Maven Plugin 1.3.1 Reference Package com.sap.prd.mobile.ios.mios</title>
+		<title>Xcode Maven Plugin 1.3.2 Reference Package com.sap.prd.mobile.ios.mios</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -42,6 +42,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="CodeSignManagerTest.html" target="classFrame">CodeSignManagerTest</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="CommandLineBuilderTest.html" target="classFrame">CommandLineBuilderTest</a>
               		</td>
             	</tr>
@@ -62,6 +67,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="FolderLayoutTest.html" target="classFrame">FolderLayoutTest</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="ForkerTest.html" target="classFrame">ForkerTest</a>
               		</td>
             	</tr>
@@ -73,11 +83,6 @@
 				            	<tr>
               		<td>
                 		<a href="MacFileUtil.html" target="classFrame">MacFileUtil</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="MavenTargetFolderLayoutTest.html" target="classFrame">MavenTargetFolderLayoutTest</a>
               		</td>
             	</tr>
 				            	<tr>
