--- a/site/xref/com/sap/prd/mobile/ios/mios/XCodePackageManager.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/XCodePackageManager.html
@@ -136,7 +136,7 @@
 <a class="jxr_linenumber" name="126" href="#126">126</a> 
 <a class="jxr_linenumber" name="127" href="#127">127</a>   <strong class="jxr_keyword">private</strong> File createMainArtifactFile(<strong class="jxr_keyword">final</strong> MavenProject project) <strong class="jxr_keyword">throws</strong> IOException
 <a class="jxr_linenumber" name="128" href="#128">128</a>   {
-<a class="jxr_linenumber" name="129" href="#129">129</a>     File mainArtifact = MavenTargetFolderLayout.getFolderForExtractedMainArtifact(project);
+<a class="jxr_linenumber" name="129" href="#129">129</a>     File mainArtifact = FolderLayout.getFolderForExtractedMainArtifact(project);
 <a class="jxr_linenumber" name="130" href="#130">130</a> 
 <a class="jxr_linenumber" name="131" href="#131">131</a>     <strong class="jxr_keyword">if</strong> (mainArtifact.exists())
 <a class="jxr_linenumber" name="132" href="#132">132</a>       FileUtils.deleteDirectory(mainArtifact);
