--- a/site/xref/com/sap/prd/mobile/ios/mios/package-frame.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Xcode Maven Plugin 1.3.1 Reference Package com.sap.prd.mobile.ios.mios</title>
+		<title>Xcode Maven Plugin 1.3.2 Reference Package com.sap.prd.mobile.ios.mios</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -34,16 +34,22 @@
             	<a href="DomUtils.html" target="classFrame">DomUtils</a>
           	</li>
           	          	<li>
+            	<a href="CodeSignManager.html" target="classFrame">ExecResult</a>
+          	</li>
+          	          	<li>
+            	<a href="CodeSignManager.html" target="classFrame">ExecutionResultVerificationException</a>
+          	</li>
+          	          	<li>
             	<a href="FileUtils.html" target="classFrame">FileUtils</a>
+          	</li>
+          	          	<li>
+            	<a href="FolderLayout.html" target="classFrame">FolderLayout</a>
           	</li>
           	          	<li>
             	<a href="Forker.html" target="classFrame">Forker</a>
           	</li>
           	          	<li>
             	<a href="GAVUtil.html" target="classFrame">GAVUtil</a>
-          	</li>
-          	          	<li>
-            	<a href="MavenTargetFolderLayout.html" target="classFrame">MavenTargetFolderLayout</a>
           	</li>
           	          	<li>
             	<a href="OTAManager.html" target="classFrame">OTAManager</a>
@@ -53,6 +59,9 @@
           	</li>
           	          	<li>
             	<a href="PackagingType.html" target="classFrame">PackagingType</a>
+          	</li>
+          	          	<li>
+            	<a href="FileUtils.html" target="classFrame">PathResolutionException</a>
           	</li>
           	          	<li>
             	<a href="PListManager.html" target="classFrame">PlistManager</a>
@@ -128,6 +137,9 @@
           	</li>
           	          	<li>
             	<a href="XCodePackageMojo.html" target="classFrame">XCodePackageMojo</a>
+          	</li>
+          	          	<li>
+            	<a href="XCodePackageXcodeprojMojo.html" target="classFrame">XCodePackageXcodeprojMojo</a>
           	</li>
           	          	<li>
             	<a href="XCodePrepareBuildManager.html" target="classFrame">XCodePrepareBuildManager</a>
