--- a/site/xref/com/sap/prd/mobile/ios/mios/package-summary.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Xcode Maven Plugin 1.3.1 Reference Package com.sap.prd.mobile.ios.mios</title>
+		<title>Xcode Maven Plugin 1.3.2 Reference Package com.sap.prd.mobile.ios.mios</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -67,7 +67,22 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="CodeSignManager.html" target="classFrame">ExecResult</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="CodeSignManager.html" target="classFrame">ExecutionResultVerificationException</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="FileUtils.html" target="classFrame">FileUtils</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="FolderLayout.html" target="classFrame">FolderLayout</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -78,11 +93,6 @@
 				            	<tr>
               		<td>
                 		<a href="GAVUtil.html" target="classFrame">GAVUtil</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="MavenTargetFolderLayout.html" target="classFrame">MavenTargetFolderLayout</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -98,6 +108,11 @@
 				            	<tr>
               		<td>
                 		<a href="PackagingType.html" target="classFrame">PackagingType</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="FileUtils.html" target="classFrame">PathResolutionException</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -223,6 +238,11 @@
 				            	<tr>
               		<td>
                 		<a href="XCodePackageMojo.html" target="classFrame">XCodePackageMojo</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="XCodePackageXcodeprojMojo.html" target="classFrame">XCodePackageXcodeprojMojo</a>
               		</td>
             	</tr>
 				            	<tr>
