--- a/site/xref-test/allclasses-frame.html
+++ b/site/xref-test/allclasses-frame.html
@@ -48,6 +48,9 @@
 				<a href="com/sap/prd/mobile/ios/mios/PListAccessorTest.html" target="classFrame">PListAccessorTest</a>
 			</li>
 						<li>
+				<a href="com/sap/prd/mobile/ios/mios/PreDeployMojoTest.html" target="classFrame">PreDeployMojoTest</a>
+			</li>
+						<li>
 				<a href="com/sap/prd/mobile/ios/mios/VersionInfoManagerTest.html" target="classFrame">VersionInfoManagerTest</a>
 			</li>
 						<li>
