--- a/site/xref-test/com/sap/prd/mobile/ios/mios/package-summary.html
+++ b/site/xref-test/com/sap/prd/mobile/ios/mios/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Xcode Maven Plugin 1.3.2 Reference Package com.sap.prd.mobile.ios.mios</title>
+		<title>Xcode Maven Plugin 1.4.0 Reference Package com.sap.prd.mobile.ios.mios</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -93,6 +93,11 @@
 				            	<tr>
               		<td>
                 		<a href="PListAccessorTest.html" target="classFrame">PListAccessorTest</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="PreDeployMojoTest.html" target="classFrame">PreDeployMojoTest</a>
               		</td>
             	</tr>
 				            	<tr>
