--- a/site/xref/allclasses-frame.html
+++ b/site/xref/allclasses-frame.html
@@ -12,13 +12,19 @@
 
 		<ul>
 						<li>
+				<a href="com/sap/prd/mobile/ios/mios/AbstractXCodeBuildMojo.html" target="classFrame">AbstractXCodeBuildMojo</a>
+			</li>
+						<li>
 				<a href="com/sap/prd/mobile/ios/mios/AbstractXCodeMojo.html" target="classFrame">AbstractXCodeMojo</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/BuildType.html" target="classFrame">BuildType</a>
 			</li>
 						<li>
-				<a href="com/sap/prd/mobile/ios/mios/PListManager.html" target="classFrame">BundleKey</a>
+				<a href="com/sap/prd/mobile/ios/mios/CheckPrerequisitesMojo.html" target="classFrame">CheckPrerequisitesMojo</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/CleanMojo.html" target="classFrame">CleanMojo</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/CodeSignManager.html" target="classFrame">CodeSignManager</a>
@@ -34,6 +40,9 @@
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/DomUtils.html" target="classFrame">DomUtils</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/EffectiveBuildSettings.html" target="classFrame">EffectiveBuildSettings</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/CodeSignManager.html" target="classFrame">ExecResult</a>
@@ -66,7 +75,10 @@
 				<a href="com/sap/prd/mobile/ios/mios/FileUtils.html" target="classFrame">PathResolutionException</a>
 			</li>
 						<li>
-				<a href="com/sap/prd/mobile/ios/mios/PListManager.html" target="classFrame">PlistManager</a>
+				<a href="com/sap/prd/mobile/ios/mios/PreDeployMojo.html" target="classFrame">PreDeployMojo</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/PreDeployMojo.html" target="classFrame">PrepareIpaPointerFileTransferListener</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/versioninfo/v_0_0_0/SCM.html" target="classFrame">SCM</a>
@@ -88,9 +100,6 @@
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/XCodeAdjustArtifactIdMojo.html" target="classFrame">XCodeAdjustArtifactIdMojo</a>
-			</li>
-						<li>
-				<a href="com/sap/prd/mobile/ios/mios/XCodeAppendBuildPhaseMojo.html" target="classFrame">XCodeAppendBuildPhaseMojo</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/XCodeBuildLayout.html" target="classFrame">XCodeBuildLayout</a>
@@ -156,13 +165,28 @@
 				<a href="com/sap/prd/mobile/ios/mios/XCodePrepareMojo.html" target="classFrame">XCodePrepareMojo</a>
 			</li>
 						<li>
+				<a href="com/sap/prd/mobile/ios/mios/XCodeProjectFileDoesNotExistException.html" target="classFrame">XCodeProjectFileDoesNotExistException</a>
+			</li>
+						<li>
 				<a href="com/sap/prd/mobile/ios/mios/XCodeProjectLayoutValidator.html" target="classFrame">XCodeProjectLayoutValidator</a>
 			</li>
 						<li>
-				<a href="com/sap/prd/mobile/ios/mios/XCodeProjectValidatorMojo.html" target="classFrame">XCodeProjectValidatorMojo</a>
+				<a href="com/sap/prd/mobile/ios/mios/XCodeProjectNotFoundException.html" target="classFrame">XCodeProjectNotFoundException</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/XCodeProjectValidateMojo.html" target="classFrame">XCodeProjectValidateMojo</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/XCodeRootFolderDoesNotExistException.html" target="classFrame">XCodeRootFolderDoesNotExistException</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/XCodeSaveBuildSettingsMojo.html" target="classFrame">XCodeSaveBuildSettingsMojo</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/XCodeSkipLibraryBuildMojo.html" target="classFrame">XCodeSkipLibraryBuildMojo</a>
+			</li>
+						<li>
+				<a href="com/sap/prd/mobile/ios/mios/XCodeValidationException.html" target="classFrame">XCodeValidationException</a>
 			</li>
 						<li>
 				<a href="com/sap/prd/mobile/ios/mios/XCodeVersionInfoMojo.html" target="classFrame">XCodeVersionInfoMojo</a>
