--- a/site/xref/com/sap/prd/mobile/ios/mios/XCodeIpaPackageMojo.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/XCodeIpaPackageMojo.html
@@ -86,8 +86,8 @@
 <a class="jxr_linenumber" name="76" href="#76">76</a>            getLog().info(<span class="jxr_string">"Production name obtained from pom file"</span>);
 <a class="jxr_linenumber" name="77" href="#77">77</a>          }
 <a class="jxr_linenumber" name="78" href="#78">78</a>          <strong class="jxr_keyword">else</strong> {
-<a class="jxr_linenumber" name="79" href="#79">79</a>            productName = getBuildConfigurationProductName(configuration);
-<a class="jxr_linenumber" name="80" href="#80">80</a>            getLog().info(<span class="jxr_string">"Product name obtained from xcode project file"</span>);
+<a class="jxr_linenumber" name="79" href="#79">79</a>            productName = EffectiveBuildSettings.getProductName(<strong class="jxr_keyword">this</strong>.project, configuration, sdk);
+<a class="jxr_linenumber" name="80" href="#80">80</a>            getLog().info(<span class="jxr_string">"Product name obtained from effective build settings file"</span>);
 <a class="jxr_linenumber" name="81" href="#81">81</a>          }
 <a class="jxr_linenumber" name="82" href="#82">82</a>  
 <a class="jxr_linenumber" name="83" href="#83">83</a>          <strong class="jxr_keyword">final</strong> String fixedProductName = getFixedProductName(productName);
