--- a/site/xref/com/sap/prd/mobile/ios/mios/XCodePackageAppMojo.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/XCodePackageAppMojo.html
@@ -79,10 +79,10 @@
 <a class="jxr_linenumber" name="69" href="#69">69</a>  
 <a class="jxr_linenumber" name="70" href="#70">70</a>      }
 <a class="jxr_linenumber" name="71" href="#71">71</a>      <strong class="jxr_keyword">else</strong> {
-<a class="jxr_linenumber" name="72" href="#72">72</a>        productName = getBuildConfigurationProductName(config);
+<a class="jxr_linenumber" name="72" href="#72">72</a>        productName = EffectiveBuildSettings.getProductName(<strong class="jxr_keyword">this</strong>.project, config, sdk);
 <a class="jxr_linenumber" name="73" href="#73">73</a>  
 <a class="jxr_linenumber" name="74" href="#74">74</a>        <strong class="jxr_keyword">if</strong> (productName == <strong class="jxr_keyword">null</strong> || productName.isEmpty())
-<a class="jxr_linenumber" name="75" href="#75">75</a>          <strong class="jxr_keyword">throw</strong> <strong class="jxr_keyword">new</strong> IllegalStateException(<span class="jxr_string">"Product Name not found in xcode configuration file"</span>);
+<a class="jxr_linenumber" name="75" href="#75">75</a>          <strong class="jxr_keyword">throw</strong> <strong class="jxr_keyword">new</strong> IllegalStateException(<span class="jxr_string">"Product Name not found in effective build settings file"</span>);
 <a class="jxr_linenumber" name="76" href="#76">76</a>      }
 <a class="jxr_linenumber" name="77" href="#77">77</a>  
 <a class="jxr_linenumber" name="78" href="#78">78</a>      <strong class="jxr_keyword">final</strong> String fixedProductName = getFixedProductName(productName);
