--- a/site/xref/com/sap/prd/mobile/ios/mios/XCodePackageManager.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/XCodePackageManager.html
@@ -177,7 +177,7 @@
 <a class="jxr_linenumber" name="167" href="#167">167</a>         Log log) <strong class="jxr_keyword">throws</strong> IOException
 <a class="jxr_linenumber" name="168" href="#168">168</a>   {
 <a class="jxr_linenumber" name="169" href="#169">169</a> 
-<a class="jxr_linenumber" name="170" href="#170">170</a>     <strong class="jxr_keyword">final</strong> File headerDir = XCodeBuildLayout.getHeadersDirectory(buildDir, configuration, sdk);
+<a class="jxr_linenumber" name="170" href="#170">170</a>     <strong class="jxr_keyword">final</strong> File headerDir = XCodeBuildLayout.getPublicHeadersDirectory(project.getBuild().getDirectory(), buildDir, configuration, sdk);
 <a class="jxr_linenumber" name="171" href="#171">171</a> 
 <a class="jxr_linenumber" name="172" href="#172">172</a>     <strong class="jxr_keyword">if</strong> (!headerDir.canRead())
 <a class="jxr_linenumber" name="173" href="#173">173</a>       <strong class="jxr_keyword">return</strong>;
