--- a/site/xref/com/sap/prd/mobile/ios/mios/XCodePrepareBuildManager.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/XCodePrepareBuildManager.html
@@ -218,7 +218,7 @@
 <a class="jxr_linenumber" name="208" href="#208">208</a>   }
 <a class="jxr_linenumber" name="209" href="#209">209</a> 
 <a class="jxr_linenumber" name="210" href="#210">210</a>   <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">void</strong> prepareFramework(MavenProject project, <strong class="jxr_keyword">final</strong> Artifact primaryArtifact)
-<a class="jxr_linenumber" name="211" href="#211">211</a>         <strong class="jxr_keyword">throws</strong> SideArtifactNotFoundException, MojoExecutionException
+<a class="jxr_linenumber" name="211" href="#211">211</a>         <strong class="jxr_keyword">throws</strong> MojoExecutionException
 <a class="jxr_linenumber" name="212" href="#212">212</a>   {
 <a class="jxr_linenumber" name="213" href="#213">213</a>     <strong class="jxr_keyword">if</strong> (primaryArtifact != <strong class="jxr_keyword">null</strong>) {
 <a class="jxr_linenumber" name="214" href="#214">214</a>       <strong class="jxr_keyword">final</strong> File source = primaryArtifact.getFile();
