--- a/site/xref/com/sap/prd/mobile/ios/mios/package-frame.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Xcode Maven Plugin 1.3.2 Reference Package com.sap.prd.mobile.ios.mios</title>
+		<title>Xcode Maven Plugin 1.4.0 Reference Package com.sap.prd.mobile.ios.mios</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,13 +16,19 @@
 
       	<ul>
       		          	<li>
+            	<a href="AbstractXCodeBuildMojo.html" target="classFrame">AbstractXCodeBuildMojo</a>
+          	</li>
+          	          	<li>
             	<a href="AbstractXCodeMojo.html" target="classFrame">AbstractXCodeMojo</a>
           	</li>
           	          	<li>
             	<a href="BuildType.html" target="classFrame">BuildType</a>
           	</li>
           	          	<li>
-            	<a href="PListManager.html" target="classFrame">BundleKey</a>
+            	<a href="CheckPrerequisitesMojo.html" target="classFrame">CheckPrerequisitesMojo</a>
+          	</li>
+          	          	<li>
+            	<a href="CleanMojo.html" target="classFrame">CleanMojo</a>
           	</li>
           	          	<li>
             	<a href="CodeSignManager.html" target="classFrame">CodeSignManager</a>
@@ -32,6 +38,9 @@
           	</li>
           	          	<li>
             	<a href="DomUtils.html" target="classFrame">DomUtils</a>
+          	</li>
+          	          	<li>
+            	<a href="EffectiveBuildSettings.html" target="classFrame">EffectiveBuildSettings</a>
           	</li>
           	          	<li>
             	<a href="CodeSignManager.html" target="classFrame">ExecResult</a>
@@ -64,7 +73,10 @@
             	<a href="FileUtils.html" target="classFrame">PathResolutionException</a>
           	</li>
           	          	<li>
-            	<a href="PListManager.html" target="classFrame">PlistManager</a>
+            	<a href="PreDeployMojo.html" target="classFrame">PreDeployMojo</a>
+          	</li>
+          	          	<li>
+            	<a href="PreDeployMojo.html" target="classFrame">PrepareIpaPointerFileTransferListener</a>
           	</li>
           	          	<li>
             	<a href="ScriptRunner.html" target="classFrame">ScriptRunner</a>
@@ -80,9 +92,6 @@
           	</li>
           	          	<li>
             	<a href="XCodeAdjustArtifactIdMojo.html" target="classFrame">XCodeAdjustArtifactIdMojo</a>
-          	</li>
-          	          	<li>
-            	<a href="XCodeAppendBuildPhaseMojo.html" target="classFrame">XCodeAppendBuildPhaseMojo</a>
           	</li>
           	          	<li>
             	<a href="XCodeBuildLayout.html" target="classFrame">XCodeBuildLayout</a>
@@ -148,13 +157,28 @@
             	<a href="XCodePrepareMojo.html" target="classFrame">XCodePrepareMojo</a>
           	</li>
           	          	<li>
+            	<a href="XCodeProjectFileDoesNotExistException.html" target="classFrame">XCodeProjectFileDoesNotExistException</a>
+          	</li>
+          	          	<li>
             	<a href="XCodeProjectLayoutValidator.html" target="classFrame">XCodeProjectLayoutValidator</a>
           	</li>
           	          	<li>
-            	<a href="XCodeProjectValidatorMojo.html" target="classFrame">XCodeProjectValidatorMojo</a>
+            	<a href="XCodeProjectNotFoundException.html" target="classFrame">XCodeProjectNotFoundException</a>
+          	</li>
+          	          	<li>
+            	<a href="XCodeProjectValidateMojo.html" target="classFrame">XCodeProjectValidateMojo</a>
+          	</li>
+          	          	<li>
+            	<a href="XCodeRootFolderDoesNotExistException.html" target="classFrame">XCodeRootFolderDoesNotExistException</a>
+          	</li>
+          	          	<li>
+            	<a href="XCodeSaveBuildSettingsMojo.html" target="classFrame">XCodeSaveBuildSettingsMojo</a>
           	</li>
           	          	<li>
             	<a href="XCodeSkipLibraryBuildMojo.html" target="classFrame">XCodeSkipLibraryBuildMojo</a>
+          	</li>
+          	          	<li>
+            	<a href="XCodeValidationException.html" target="classFrame">XCodeValidationException</a>
           	</li>
           	          	<li>
             	<a href="XCodeVersionInfoMojo.html" target="classFrame">XCodeVersionInfoMojo</a>
