--- a/site/xref/com/sap/prd/mobile/ios/mios/package-summary.html
+++ b/site/xref/com/sap/prd/mobile/ios/mios/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Xcode Maven Plugin 1.3.2 Reference Package com.sap.prd.mobile.ios.mios</title>
+		<title>Xcode Maven Plugin 1.4.0 Reference Package com.sap.prd.mobile.ios.mios</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -37,6 +37,11 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="AbstractXCodeBuildMojo.html" target="classFrame">AbstractXCodeBuildMojo</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="AbstractXCodeMojo.html" target="classFrame">AbstractXCodeMojo</a>
               		</td>
             	</tr>
@@ -47,7 +52,12 @@
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="PListManager.html" target="classFrame">BundleKey</a>
+                		<a href="CheckPrerequisitesMojo.html" target="classFrame">CheckPrerequisitesMojo</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="CleanMojo.html" target="classFrame">CleanMojo</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -63,6 +73,11 @@
 				            	<tr>
               		<td>
                 		<a href="DomUtils.html" target="classFrame">DomUtils</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="EffectiveBuildSettings.html" target="classFrame">EffectiveBuildSettings</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -117,7 +132,12 @@
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="PListManager.html" target="classFrame">PlistManager</a>
+                		<a href="PreDeployMojo.html" target="classFrame">PreDeployMojo</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="PreDeployMojo.html" target="classFrame">PrepareIpaPointerFileTransferListener</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -143,11 +163,6 @@
 				            	<tr>
               		<td>
                 		<a href="XCodeAdjustArtifactIdMojo.html" target="classFrame">XCodeAdjustArtifactIdMojo</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="XCodeAppendBuildPhaseMojo.html" target="classFrame">XCodeAppendBuildPhaseMojo</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -257,17 +272,42 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="XCodeProjectFileDoesNotExistException.html" target="classFrame">XCodeProjectFileDoesNotExistException</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="XCodeProjectLayoutValidator.html" target="classFrame">XCodeProjectLayoutValidator</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="XCodeProjectValidatorMojo.html" target="classFrame">XCodeProjectValidatorMojo</a>
+                		<a href="XCodeProjectNotFoundException.html" target="classFrame">XCodeProjectNotFoundException</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="XCodeProjectValidateMojo.html" target="classFrame">XCodeProjectValidateMojo</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="XCodeRootFolderDoesNotExistException.html" target="classFrame">XCodeRootFolderDoesNotExistException</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="XCodeSaveBuildSettingsMojo.html" target="classFrame">XCodeSaveBuildSettingsMojo</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
                 		<a href="XCodeSkipLibraryBuildMojo.html" target="classFrame">XCodeSkipLibraryBuildMojo</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="XCodeValidationException.html" target="classFrame">XCodeValidationException</a>
               		</td>
             	</tr>
 				            	<tr>
